# openapi/openapi.yaml
@@ -91,15 +91,112 @@ paths:
           description: Task not found
         '500':
           description: Internal server error
+  /users:
+    get:
+      summary: Get all users
+      tags:
+        - users
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        '500':
+          description: Server internal error
+    post:
+      summary: Create a new user
+      tags:
+        - users
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '201':
+          description: The created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Input error, request body is incorrect
+        '500':
+          description: Internal server error
+  /users/{user_id}:
+    patch:
+      summary: Update user by ID
+      tags:
+        - users
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        '200':
+          description: User updated
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '400':
+          description: Invalid input
+        '404':
+          description: User not found
+        '500':
+          description: Internal server error
+    delete:
+      summary: Delete user by ID
+      tags:
+        - users
+      parameters:
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: uint
+      responses:
+        '204':
+          description: User deleted successfully
+        '404':
+          description: User not found
+        '500':
+          description: Internal server error
 components:
-  schemas:
-    Task:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: uint
-        task:
-          type: string
-        is_done:
-          type: boolean
+    schemas:
+      Task:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: uint
+          task:
+            type: string
+          is_done:
+            type: boolean
+      User:
+        type: object
+        properties:
+          id:
+            type: integer
+            format: uint
+          email:
+            type: string
+          password:
+            type: string
